--- a/index.html
+++ b/index.html
@@ -108,33 +108,13 @@ nav a:hover {
         <h2>联系 Contact</h2>
         <p>如果您有实力投资本站请联系经纪人阿且: If you have the capability to invest in this site, please contact the broker, Aqie:</p>
         <p>Email: ljh#qq.com 将#替换为@ replace # with @ </p>
-        <p>WeChat ID: qq4409535</p>
+        <p>WeChat ID: 4409535</p>
 		<p>Phone: +86 2028962178</p>
-    
-        <div class="image-links">
-        <a href="https://u.jd.com/ZqqgHlj" target="_blank"><img src="img/20231126011351.jpg" alt="JD Flash Sale" /></a> 
-        <a href="https://u.jd.com/ZiqLWl6" target="_blank"><img src="img/20231126005122.jpg" alt="JD Hot List" /></a> 
-    </div>
 	</section>
     </main>  
     <footer>  
      <p>版权所有 All rights <span id="domainDisplay2"></span> &copy; 2023 | 我的个人网站 My Personal Website</p> 
     </footer>  
-<script>
-document.getElementById('menuToggle').addEventListener('click', function() {
-    var menu = document.getElementById('menu');
-    if (menu.classList.contains('active')) {
-        menu.classList.remove('active');
-    } else {
-        menu.classList.add('active');
-    }
-});
-</script>
-<script>
-    // image-links ad@2023-11-25'
-    document.getElementById('domainDisplay1').textContent = '' + window.location.hostname;
-    document.getElementById('domainDisplay2').textContent = '' + window.location.hostname;
-</script>
 <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
 <script>LA.init({id:"21AULIuFPZRkpKqD",ck:"21AULIuFPZRkpKqD",autoTrack:true,hashMode:true})</script>
 </body>  
